--- a/index.html
+++ b/index.html
@@ -1,56 +1,310 @@
-<!doctype html>
+lo<!doctype html>
 <html lang="es">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>¿Quieres ser mi San Valentín?</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+:root{--bg-top:#fff8fb;--bg-bottom:#fff0f6;--card:#fffdfd;--accent:#ff4d87;--accent-2:#ffd166;--text:#2b2b2b;}
+*{box-sizing:border-box}
+body{margin:0;font-family:Inter,system-ui,Segoe UI;color:var(--text);min-height:100vh;display:flex;align-items:center;justify-content:center}
+body::before{content:"";position:fixed;inset:0;background:linear-gradient(180deg,var(--bg-top),var(--bg-bottom));z-index:-2}
+body::after{content:"";position:fixed;inset:0;background:radial-gradient(circle at 10% 10%, rgba(255,200,220,0.08), transparent 8%);z-index:-1}
+.center{width:100%;max-width:540px;padding:32px}
+.card{background:linear-gradient(135deg,#fff 0%,#fff8fb 50%,#fff2f8 100%);border-radius:22px;box-shadow:0 18px 70px rgba(0,0,0,0.09);padding:40px;text-align:center;border:1px solid rgba(255,80,120,0.1);animation:slideInCard 700ms ease forwards}
+h1{margin:0 0 14px;font-size:2rem;background:linear-gradient(90deg,var(--accent),#ff8fb3);-webkit-background-clip:text;-webkit-text-fill-color:transparent;background-clip:text}
+.subtitle{margin:6px 0 22px;color:#7a8a9a;font-size:0.98rem;font-weight:500}
+.buttons{display:flex;gap:12px;justify-content:center;margin-bottom:8px}
+.btn{padding:12px 22px;border-radius:10px;border:none;font-size:1rem;cursor:pointer;box-shadow:0 6px 12px rgba(0,0,0,0.06);transition:all 350ms ease}
+.btn.yes{background:linear-gradient(90deg,var(--accent),#ff7bb3);color:#fff;font-weight:600}
+.btn.yes:hover{transform:scale(1.06);box-shadow:0 12px 24px rgba(255,77,135,0.25)}
+.btn.no{background:#fff6f8;color:#6b6b6b;border:1px solid rgba(0,0,0,0.04);font-weight:500}
+.btn.no:hover{background:#fff;box-shadow:0 8px 20px rgba(0,0,0,0.08)}
+.response{margin-top:18px}
+.hidden{display:none}
+.emoji{font-size:56px;margin-bottom:8px}
+.message{font-size:1.05rem;margin:0}
+.lives{margin-top:10px;color:#b33;font-weight:600}
+.modal{position:fixed;inset:0;display:flex;align-items:center;justify-content:center;z-index:60}
+.modal.hidden{display:none}
+.modal-backdrop{position:absolute;inset:0;background:rgba(0,0,0,0.35)}
+.modal-content{position:relative;background:linear-gradient(180deg,#fff,#fff7fb);padding:20px 22px;border-radius:18px;box-shadow:0 12px 40px rgba(0,0,0,0.18);max-width:720px;width:90%;text-align:center;z-index:2}
+.modal-content .close{position:absolute;right:10px;top:6px;border:none;background:transparent;font-size:26px;cursor:pointer}
+.letter{background:linear-gradient(180deg,#fff,#fff7fb);padding:16px;border-radius:12px;border:1px dashed rgba(255,100,140,0.22);color:#333;font-size:1.05rem}
+.hearts{position:absolute;inset:0;pointer-events:none;overflow:hidden}
+.heart{position:absolute;left:50%;transform:translateX(-50%);width:28px;height:28px;color:#ff5577;font-size:22px;animation:floatUp 4200ms ease-out forwards;opacity:1;text-shadow:0 0 12px rgba(255,100,140,0.3)}
+@keyframes floatUp{0%{transform:translateY(30px) scale(0.4);opacity:0}15%{opacity:1}100%{transform:translateY(-280px) scale(1.4);opacity:0}}
+#confetti{position:fixed;inset:0;pointer-events:none;overflow:hidden;z-index:55}
+.confetti-piece{position:absolute;width:10px;height:14px;opacity:0.9;animation:fall 2600ms ease-in forwards;border-radius:50%}
+@keyframes fall{0%{transform:translateY(-20vh) rotate(0deg);opacity:1}100%{transform:translateY(120vh) rotate(720deg) scale(0.6);opacity:0}}
+.envelope{width:260px;height:148px;margin:6px auto 12px;position:relative;cursor:pointer;perspective:1000px;transition:all 400ms ease}
+.envelope:hover{transform:translateY(-6px);filter:drop-shadow(0 16px 32px rgba(255,77,135,0.15))}
+.envelope .env-body{width:100%;height:72%;background:linear-gradient(180deg,#fff,#fff6f8);border-radius:12px;border:2px solid rgba(255,140,170,0.25);box-shadow:0 8px 24px rgba(255,80,120,0.08) inset}
+.envelope .env-top{position:absolute;left:0;right:0;top:0;height:66%;background:linear-gradient(180deg,#ffebf3,#fff);border-bottom:2px solid rgba(255,140,170,0.25);transform-origin:top center;transition:transform 600ms ease;box-shadow:0 -4px 12px rgba(0,0,0,0.04)}
+.envelope.open .env-top{transform:rotateX(-175deg);box-shadow:0 12px 24px rgba(0,0,0,0.15)}
+.envelope:after{content:"";position:absolute;left:10px;right:10px;top:44%;height:2px;background:linear-gradient(90deg,transparent,#ffc0d9,transparent);opacity:0.7}
+.open-hint{text-align:center;color:#8a8a8a;margin-top:8px;font-weight:600;animation:fadeInUp 700ms ease 800ms both}
+@keyframes fadeInUp{0%{opacity:0;transform:translateY(12px)}100%{opacity:1;transform:translateY(0)}}
+@keyframes slideInCard{0%{opacity:0;transform:translateY(24px)}100%{opacity:1;transform:translateY(0)}}
+.final-black{position:fixed;inset:0;display:flex;align-items:center;justify-content:center;background:linear-gradient(135deg,#0a0a0a,#1a001a,#0b0b0b);z-index:120}
+.final-black.hidden{display:none}
+.final-black-content{color:#fff;font-size:1.6rem;padding:36px;text-align:center;background:linear-gradient(90deg,rgba(255,120,180,0.12),rgba(160,120,255,0.08));border-radius:16px;border:1px solid rgba(255,100,140,0.1);animation:slideUp 600ms ease 200ms both}
+@keyframes slideUp{0%{opacity:0;transform:translateY(20px)}100%{opacity:1;transform:translateY(0)}}
+.final-letter{background:linear-gradient(135deg,#fff8f9,#fff1fb,#ffe6f0);border-radius:16px;padding:28px;border:1px solid rgba(255,100,140,0.25);box-shadow:0 24px 80px rgba(255,77,135,0.12);animation:scaleIn 700ms ease}
+.final-letter h2{color:var(--accent);margin:0 0 12px;font-size:1.4rem}
+.final-letter p{color:#4b3b4b;line-height:1.7;margin:8px 0;font-size:1.02rem}
+@keyframes scaleIn{0%{opacity:0;transform:scale(0.85)}100%{opacity:1;transform:scale(1)}}
+#volumeToggle{position:fixed;bottom:20px;right:20px;z-index:100;padding:8px 12px;border-radius:50%;border:none;background:rgba(255,77,135,0.2);color:var(--accent);font-size:20px;cursor:pointer;transition:all 300ms ease;backdrop-filter:blur(8px)}
+    </style>
   </head>
   <body>
-    <main class="center">
-      <div class="card" id="card">
+    <!-- Audio -->
+    <audio id="bgMusic" preload="metadata">
+      <source src="https://raw.githubusercontent.com/2sdnzfbfgc-web/san_valentin_s/main/ytmp3free.cc_zoe-azul-lyric-video-youtubemp3free.org%20(1).mp3" type="audio/mpeg">
+    </audio>
+    <button id="volumeToggle">🔊</button>
+
+    <!-- Intro modal: sobre interactivo -->
+    <div id="introModal" class="modal">
+      <div class="modal-backdrop"></div>
+      <div class="modal-content">
+        <div id="envelope" class="envelope" role="button" tabindex="0">
+          <div class="env-top"></div>
+          <div class="env-body"></div>
+        </div>
+        <p class="open-hint">Pulsa para abrir</p>
+        <div class="letter hidden" id="introText"><p>Para ti...</p></div>
+      </div>
+    </div>
+
+    <!-- Main card -->
+    <main class="center hidden" id="mainCard">
+      <div class="card">
         <h1>¿Quieres ser mi San Valentín?</h1>
         <p class="subtitle">Pulsa una opción y veremos qué pasa ❤️</p>
-        <div id="buttons" class="buttons">
+        <div class="buttons">
           <button id="yes" class="btn yes">Sí</button>
           <button id="no" class="btn no">No</button>
         </div>
-
         <div id="response" class="response hidden">
           <div id="emoji" class="emoji"></div>
           <p id="message" class="message"></p>
-          <div id="lives" class="lives hidden">Vidas: <span id="count">3</span></div>
+          <div id="lives" class="lives hidden">Vidas: <span id="count">4</span></div>
         </div>
       </div>
     </main>
-    <script src="script.js"></script>
+
+    <!-- Final letter modal -->
+    <div id="letterModal" class="modal hidden">
+      <div class="modal-backdrop"></div>
+      <div class="modal-content">
+        <button id="closeLetter" class="close">×</button>
+        <div class="letter" id="letterContent">
+          <p>Gracias...</p>
+        </div>
+        <div id="hearts" class="hearts"></div>
+      </div>
+    </div>
+
+    <!-- Final black screen -->
+    <div id="finalBlack" class="final-black hidden">
+      <div class="final-black-content">mmm ya así nos llevamos</div>
+    </div>
+
+    <!-- Confetti -->
+    <div id="confetti"></div>
+
+    <script>
+document.addEventListener('DOMContentLoaded', () => {
+  const mainCard = document.getElementById('mainCard');
+  const yes = document.getElementById('yes');
+  const no = document.getElementById('no');
+  const response = document.getElementById('response');
+  const emoji = document.getElementById('emoji');
+  const message = document.getElementById('message');
+  const livesWrap = document.getElementById('lives');
+  const count = document.getElementById('count');
+  const introModal = document.getElementById('introModal');
+  const envelope = document.getElementById('envelope');
+  const introText = document.getElementById('introText');
+  const finalBlack = document.getElementById('finalBlack');
+  const letterModal = document.getElementById('letterModal');
+  const closeLetter = document.getElementById('closeLetter');
+  const confettiRoot = document.getElementById('confetti');
+  const heartsRoot = document.getElementById('hearts');
+  const bgMusic = document.getElementById('bgMusic');
+  const volumeToggle = document.getElementById('volumeToggle');
+
+  let lives = 4;
+  let angerLevel = 0;
+  let movingNoInterval = null;
+  let musicPlaying = false;
+
+  // Volume toggle
+  volumeToggle.addEventListener('click', () => {
+    if(musicPlaying){
+      bgMusic.pause();
+      volumeToggle.textContent = '🔇';
+      musicPlaying = false;
+    } else {
+      bgMusic.play().catch(e=>console.log('Autoplay blocked'));
+      volumeToggle.textContent = '🔊';
+      musicPlaying = true;
+    }
+  });
+
+  // Envelope click
+  envelope.addEventListener('click', () => {
+    envelope.classList.add('open');
+    bgMusic.play().catch(e=>console.log('Autoplay blocked'));
+    musicPlaying = true;
+    volumeToggle.textContent = '🔊';
+    setTimeout(() => {
+      const seq = ['Para ti Saiomi', 'No sabía cómo decírtelo', 'Desde que llegaste a mi vida todo ha sido mejor', '...'];
+      let i = 0;
+      introText.classList.remove('hidden');
+      introText.querySelector('p').textContent = seq[i];
+      const t = setInterval(() => {
+        i++;
+        if(i < seq.length){
+          introText.querySelector('p').textContent = seq[i];
+        } else {
+          clearInterval(t);
+          introModal.classList.add('hidden');
+          mainCard.classList.remove('hidden');
+        }
+      }, 2200);
+    }, 520);
+  });
+
+  // Yes button
+  yes.addEventListener('click', () => {
+    yes.disabled = true;
+    no.disabled = true;
+    response.classList.add('hidden');
+    const finalMsg = `<div class="final-letter"><h2>Feliz San Valentín, mi amor 💌</h2><p>Gracias por existir en mi vida y por iluminar mis días incluso desde la distancia. Perdóname por no poder estar siempre a tu lado, pero cada pensamiento mío te abraza y te acompaña. Eres hermosa, fuerte y valiente, y aunque la vida traiga obstáculos, sé que Dios te cuidará siempre.</p><p>Gracias por enseñarme a sonreír más, por tu ternura y tu fuerza. Te amo con todo mi corazón, hoy y siempre, y nada ni nadie podrá cambiar eso ❤️✨.</p></div>`;
+    letterModal.querySelector('.letter').innerHTML = finalMsg;
+    letterModal.classList.remove('hidden');
+    spawnConfetti(110);
+    spawnHearts(36);
+  });
+
+  // Move No button
+  function moveNoButton(el){
+    el.style.position = 'fixed';
+    el.style.left = Math.random()*80 + 10 + '%';
+    el.style.top = Math.random()*70 + 20 + '%';
+  }
+
+  // No button click
+  no.addEventListener('click', () => {
+    if(lives <= 0) return;
+    lives--;
+    angerLevel++;
+    livesWrap.classList.remove('hidden');
+    count.textContent = lives;
+    const faces = ['😠', '😡', '😤'];
+    emoji.textContent = faces[Math.min(angerLevel, 2)];
+    message.textContent = `Te quedan ${lives} vidas`;
+    response.classList.remove('hidden');
+    moveNoButton(no);
+    spawnAngryClones(no, Math.min(6, 1+angerLevel));
+    if(lives === 0){
+      no.style.display = 'none';
+      createMovingNo();
+    }
+  });
+
+  function spawnAngryClones(el, amount){
+    const rect = el.getBoundingClientRect();
+    for(let i=0;i<amount;i++){
+      const node = document.createElement('div');
+      node.className = 'emoji';
+      node.textContent = ['😠','😡','😤'][Math.min(angerLevel,2)];
+      node.style.position = 'fixed';
+      node.style.left = Math.min(Math.max(8, rect.left+Math.random()*80-40), window.innerWidth-40)+'px';
+      node.style.top = Math.min(Math.max(40, rect.top+Math.random()*40-20), window.innerHeight-40)+'px';
+      node.style.fontSize = '18px';
+      document.body.appendChild(node);
+      setTimeout(()=>node.remove(), 1600);
+    }
+  }
+
+  function createMovingNo(){
+    const m = document.createElement('button');
+    m.textContent = 'No';
+    m.className = 'btn no';
+    m.style.position = 'fixed';
+    m.style.opacity = '0.85';
+    m.style.zIndex = '80';
+    document.body.appendChild(m);
+    function randomPos(){
+      m.style.left = Math.random()*80+10+'%';
+      m.style.top = Math.random()*70+20+'%';
+    }
+    randomPos();
+    movingNoInterval = setInterval(randomPos, 700);
+    m.addEventListener('click', ()=>{
+      clearInterval(movingNoInterval);
+      m.remove();
+      document.querySelectorAll('.modal, .center').forEach(n=>n.classList.add('hidden'));
+      finalBlack.classList.remove('hidden');
+      bgMusic.pause();
+      musicPlaying = false;
+      volumeToggle.textContent = '🔇';
+    });
+  }
+
+  closeLetter.addEventListener('click', () => {
+    letterModal.classList.add('hidden');
+    confettiRoot.innerHTML = '';
+    heartsRoot.innerHTML = '';
+    bgMusic.volume = 1;
+    const fadeOut = setInterval(()=>{
+      bgMusic.volume = Math.max(0, bgMusic.volume-0.1);
+      if(bgMusic.volume <= 0.1){
+        clearInterval(fadeOut);
+        bgMusic.pause();
+        bgMusic.currentTime = 0;
+        bgMusic.volume = 1;
+        musicPlaying = false;
+        volumeToggle.textContent = '🔇';
+      }
+    }, 100);
+  });
+
+  function spawnConfetti(amount){
+    const colors = ['#ff5c8a','#ffd166','#6fe7c1','#ff8fab','#8ec5ff'];
+    for(let i=0;i<amount;i++){
+      const el = document.createElement('div');
+      el.className = 'confetti-piece';
+      el.style.width = Math.random()*12+8+'px';
+      el.style.height = el.style.width;
+      el.style.background = colors[Math.floor(Math.random()*colors.length)];
+      el.style.left = Math.random()*100+'%';
+      el.style.top = Math.random()*20-20+'%';
+      el.style.animationDuration = 1800+Math.random()*800+'ms';
+      confettiRoot.appendChild(el);
+      setTimeout(()=>el.remove(), 4200);
+    }
+  }
+
+  function spawnHearts(amount){
+    const colors = ['#ff4d6d','#ff8fb3','#ff6b9a'];
+    for(let i=0;i<amount;i++){
+      const h = document.createElement('div');
+      h.className = 'heart';
+      h.style.left = 10+Math.random()*80+'%';
+      h.style.top = 60+Math.random()*30+'%';
+      h.style.fontSize = 12+Math.random()*26+'px';
+      h.style.color = colors[Math.floor(Math.random()*colors.length)];
+      h.textContent = '❤';
+      heartsRoot.appendChild(h);
+      setTimeout(()=>h.remove(), 3800+Math.random()*1200);
+    }
+    setTimeout(()=>spawnHearts(Math.max(6, Math.floor(amount/2))), 900);
+  }
+});
+    </script>
   </body>
 </html>
-
-<!-- Modal carta + corazones -->
-<div id="letterModal" class="modal hidden">
-  <div class="modal-backdrop"></div>
-  <div class="modal-content">
-    <button id="closeLetter" class="close">×</button>
-    <div class="dog-illustration" aria-hidden="true">
-      <!-- ilustración de perrito simple (original) -->
-      <svg width="140" height="100" viewBox="0 0 140 100" xmlns="http://www.w3.org/2000/svg">
-        <g fill="none" stroke="#333" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
-          <ellipse cx="70" cy="62" rx="36" ry="22" fill="#fff5f9" stroke="none"/>
-          <path d="M30 55 q10 -24 40 -26 q30 2 40 26" fill="#fff5f9" stroke="#333"/>
-          <circle cx="55" cy="48" r="3" fill="#333"/>
-          <circle cx="85" cy="48" r="3" fill="#333"/>
-          <path d="M68 60 q-4 6 -10 6" stroke="#333" fill="none"/>
-        </g>
-      </svg>
-    </div>
-
-    <div class="letter">
-      <p>Gracias por estar en mi vida mi hermosa novia, te amo muchoooooo. Eres la mejor novia y una mujer perfecta. Perdón que no vamos a estar juntos este San Valentín y recuerda que eres una niña fuerte. Te amo mucho más que las estrellas.</p>
-    </div>
-    <div id="hearts" class="hearts"></div>
-  </div>
-</div>
-
-<!-- Contenedor de confetti -->
-<div id="confetti"></div>
